--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "test-vars-enums-classes/var-classes.ts",
     "test-vars-enums-classes/var-let.ts",
     "test-vars-enums-classes/vars-and-classes-test.ts",
-    "test-interfaces/interface.ts
+    "test-interfaces/interface.ts"
   ]
 }
