--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "keywords": [
     "toolchain",
     "sourcegraph",
-    "typescript",
+    "typescript"
   ],
   "homepage": "https://sourcegraph.com/",
   "author": {
@@ -18,6 +18,6 @@
   },
   "dependencies": {
     "typescript": "^1.8.2"
-  },
+  }
 }
 
